--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
     </header>
 
     <Main>
-        <h3>Issa Salman</h3>
-            <img src="img/Issa Picture.jpg" alt="my picture"  />
+        <h2>Issa Salman</h2>
+        <div class="img">
+            <img src="img/Issa Picture.jpg" alt="my picture"  />  
+        </div>
+            
         <p>
             My name is Issa Salman. I am 25 years old, and I graduated From Hashemite University as a Mechatronics Engineer 2 years ago.
             I worked as a site engineer in pv solar systems for a while then I moved to coding Because I feel that I will do better in this field. 
@@ -37,7 +40,9 @@
 
     <footer>
         <a href="https://github.com/issasalman">GitHub Profile</a>
+        <br>
         <a href="https://www.linkedin.com/in/issa-salman96/">linkedIn Profile</a>
+        <br>
 
         &copy; Issa Salman
     </footer>
