--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <!-- <link rel="stylesheet" href="css/reset.css"> -->
+    <link rel="stylesheet" href="css/reset.css">
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -30,7 +30,7 @@
             <img src="img/Issa Picture.jpg" alt="my picture"  />  
         </div>
             
-       <div>
+       <div class="x1">
         <ul>
         <li>My name is Issa Salman. </li>
         <li>I am 25 years old</li>
@@ -44,7 +44,7 @@
 
         <h3>Top places I like in  Jordan</h3>
         <br>
-        <div>
+        <div class="x1">
         <ol>
         <li>Aqaba </li>
         <li>Wadi al shta</li>
