--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <li>Jarash</li>
         <li>wadi Musa</li>
         <li>Dead Sea</li>
-        <li>Read Sea </li>
+        <li>Red Sea </li>
 
 
         </ol>
