--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <Main>
         <h2>Issa Salman</h2>
         <div class="img">
-            <img src="img/Issa Picture.jpg" alt="my picture"  />  
+            <img src="img/Issa Picture.jpg" alt="my picture" title="Graduation Picture Issa Salman" />  
         </div>
             
        <div class="x1">
@@ -42,7 +42,7 @@
         </div>
           
 
-        <h3>Top places I like in  Jordan</h3>
+        <h3>Top places I like in  Jordan:-</h3>
         <br>
         <div class="x1">
         <ol>
